--- a/index.html
+++ b/index.html
@@ -37,6 +37,65 @@
             <img src="./img/photo-nbg.png" alt="profile-photo" class="profile-photo">
         </div>
     </div>
+    <div id="portfolio">
+        <div class="liner">
+            <div class="underline-per"></div>
+            <div class="line">projects</div>
+        </div>
+        <section class="portfolio-section">
+            <div class="paras">
+                <p class="section-tag">Copperants Project</p>
+                <p class="section-sub-tag">This Project was built as part of assessment, this was my very first project
+                    which I had built with complete HTML and very little knowledge of CSS.</p>
+            </div>
+            <div class="thumbnail">
+                <a href="https://karananeja.github.io/Assignment/" target="_blank">
+                    <img src="./img/p-01.png" alt="main-page" class="p-01">
+                </a>
+            </div>
+        </section>
+        <section class="portfolio-section left">
+            <div class="paras">
+                <p class="section-tag">Basic Calculator Project</p>
+                <p class="section-sub-tag">This Project was built using HTML, CSS and JavaScript. It has few pitfalls,
+                    will fix them soon!</p>
+            </div>
+            <div class="thumbnail">
+                <a href="https://karananeja.github.io/calc/" target="_blank">
+                    <img src="./img/p-02.png" alt="main-page" class="p-02">
+                </a>
+            </div>
+        </section>
+        <section class="portfolio-section">
+            <div class="paras">
+                <p class="section-tag">Educational Website Project</p>
+                <p class="section-sub-tag">I've tried to create a landing page for My tutorial classes so that students
+                    can reach out to me for classes via online platforms.</p>
+            </div>
+            <div class="thumbnail">
+                <a href="https://karananeja.github.io/demo-website/" target="_blank">
+                    <img src="./img/p-03.png" alt="main-page" class="p-03">
+                </a>
+            </div>
+        </section>
+        <section class="portfolio-section left">
+            <div class="paras">
+                <p class="section-tag">Chore Door Project</p>
+                <p class="section-sub-tag">I had built this project while I was taking up a course Codecademy.</p>
+            </div>
+            <div class="thumbnail">
+                <a href="https://karananeja.github.io/choreDoor/" target="_blank">
+                    <img src="./img/p-04.png" alt="main-page" class="p-04">
+                </a>
+            </div>
+        </section>
+    </div>
+    <div id="about">
+        <div class="liner">
+            <div class="underline-per"></div>
+            <div class="line">about me</div>
+        </div>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
