--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./font/css/all.min.css">
     <title>Karan Kumar Aneja R - Web Developer</title>
 </head>
 
 <body>
-    <!-- reference link -->
-    <!-- https://danielautry.com -->
     <nav class="title-links">
-        <div class="title"><a href="#">K.</a></div>
+        <div class="title"><a href="index.html">K.</a>
+        </div>
         <ul class="links">
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
+            <li><a href="#about" class="scroll-link">About</a></li>
+            <li><a href="./Resume_SP.pdf" target="_blank">Resume</a></li>
+            <li><a href="#contact" class="scroll-link">Contact</a></li>
         </ul>
     </nav>
     <div class="main-section">
@@ -29,7 +29,7 @@
                 development
                 to make it a better place.</p>
             <div class="portfolio-link">
-                <a href="#portfolio">Check out my work</a>
+                <a href="#portfolio" class="scroll-link">Check out my work</a>
             </div>
             <div class="underline"></div>
         </div>
@@ -95,8 +95,55 @@
             <div class="underline-per"></div>
             <div class="line">about me</div>
         </div>
+        <!-- <div class="about-me">
+            <div class="about-intro">Investigation Specialist</div>
+            <div class="about-sub-intro">AMAZON DEVELOPMENT CENTRE (INDIA) PRIVATE LIMITED</div>
+            <div class="about-sub-intro-2">Nov 2021 - Present</div>
+            <p class="about">Prepared new SOP like Guidelines PPT which can be used for training purpose.
+                Investigated suspicious activities which could the delude Amazon Customers. Helped Sellers in
+                boosting their Sales and receiving more Orders based on their performance. Identified the
+                duplication of the Product across multiple marketplaces.
+            </p>
+        </div> -->
+        <div class="about-me">
+            <div class="about-intro">Developer and Tutor from Bangalore, <br>India.</div>
+            <p class="about">I like to build cool tech with new technologies such as React JS,
+                Node JS and many more. I like bike rides, I've been to many places on Bike. I'm high school tutor as
+                well, have been educating high school student from past 4 years.
+            </p>
+        </div>
     </div>
-
+    <div id="contact">
+        <div class="liner">
+            <div class="underline-per"></div>
+            <div class="line">contact me</div>
+        </div>
+        <div class="contact-details">
+            <div class="email">karananeja.r@gmail.com</div>
+            <p class="about contact-line">Always down to collaborate when I have the time. I'm hoping to further my
+                career by
+                disrupting the social product space.
+                Let's get in touch ✌️.</p>
+            <!-- social media links -->
+            <a href="https://www.twitter.com/karankumaraneja" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://github.com/karananeja" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/karan-kumar-aneja-r-24143315a/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+        </div>
+    </div>
+    <footer>
+        <div class="footer">
+            <p>
+                This site is hand-crafted, with care. Copyright &copy; Karan Kumar Aneja R, <span id="date"></span>.
+                <br>
+                Icons courtesy of <a href="https://www.fontawesome.com" target="_blank">Font Awesome</a>, Template
+                Inspiration from <a href="https://danielautry.com" target="_blank">Daniel Autry</a>
+            </p>
+        </div>
+    </footer>
+    <a href="#" class="scroll-link top-link">
+        <i class="fas fa-arrow-up"></i>
+    </a>
     <script src="./js/main.js"></script>
 </body>
 
